@@ -16,6 +16,7 @@
  */
 package javax.websocket.server;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -175,12 +176,20 @@ public interface ServerEndpointConfig extends EndpointConfig {
                     Class<Configurator> clazz =
                             (Class<Configurator>) Class.forName(
                                     DEFAULT_IMPL_CLASSNAME);
-                    result = clazz.newInstance();
+                    result = clazz.getDeclaredConstructor().newInstance();
                 } catch (ClassNotFoundException e) {
                     // No options left. Just return null.
                 } catch (InstantiationException e) {
                     // No options left. Just return null.
                 } catch (IllegalAccessException e) {
+                    // No options left. Just return null.
+                } catch (IllegalArgumentException e) {
+                    // No options left. Just return null.
+                } catch (SecurityException e) {
+                    // No options left. Just return null.
+                } catch (InvocationTargetException e) {
+                    // No options left. Just return null.
+                } catch (NoSuchMethodException e) {
                     // No options left. Just return null.
                 }
             }
